MarcoKitTests/TestData/error/truefalse.marco
--before
[truefalse]

--after
5-6: Whitespace required between array entries
